# CS-253

./: README.md
Assignments/cs253_assign_1_180771/: how_to_run
Assignments/cs253_assign_1_180771/Run_this/: script_2
Assignments/cs253_assign_1_180771/q1_cs253_180771/: submission-q1.txt
Assignments/cs253_assign_3_180771/: generate.sh  logic.cpp  p.cpp  readme.md  reduce.sh
Assignments/cs253_assign_4_180771/: code_without_vulnerabilities1.cpp  readme.md
Assignments/cs253_assign_5_180771/: generate.py  link_to_data.txt  makefile  readme.md
CS253_Demo/Demo-Codes-master/Demo-2-Autotools/: Makefile  Makefile.am  Makefile.in  conf.h  conf.h.in  config.status  configure  configure.ac  hello1.c  hello2.cpp  helloworld.cpp  readme.md  world1.c  world2.cpp
CS253_MidSem_180771/: Makefile  crack.sh  final_test_gen.S  hl98_httpreq_func_89.S  log_zipfilegen.txt  secret.txt  zipfilegen.out
Exams/CS253_MidSem_180771/: all_8oc_vec_ptr_87.S  log_password.txt  log_secret.txt  password.txt
cs253_assign_1_180771/: readme.md
cs253_assign_1_180771/Run_this/: script_main  steps_2.txt
cs253_assign_1_180771/q1_cs253_180771/: 180771_TtmtVJDBGw2Q3  q1-cs253.tar  script_1  steps_1.txt
cs253_assign_1_180771/q2_cs253_180771/: q2-cs253.tar  steps_2.txt
cs253_assign_4_180771/: Makefile  code.cpp  code_without_vulnerabilities1.cpp  code_without_vulnerabilities2.cpp  code_without_vulnerabilities3.cpp  output.txt  readme.md  run.sh  steps.txt
cs253_assign_5_180771/: cs253_assignment_5_180771.tex  data.csv  generate.py  readme.md  steps.txt  tex_data.txt
(+16 files in other folders)
